--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -9,6 +9,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
     <style>
         table {
             width: 100%;
@@ -24,14 +27,29 @@
         th {
             background-color: #f2f2f2;
         }
+
     </style>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./lib/bootstrap/dist/js/bootstrap.js"></script>
-
 </head>
+
 <body>
     <h4>@ViewData["Title"]</h4>
+    <div class="container">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <label for="dataConsulta" class="form-label">Inserir/ Consultar prontuário por data:</label>
+                    <input type="date" class="form-control" id="dataConsulta">
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="nomePaciente" class="form-label">Filtrar por Paciente:</label>
+                    <input type="text" class="form-control" id="nomePaciente" placeholder="Digite o nome do paciente">
+                </div>
+                <div class="col-md-2 mb-3 align-self-end">
+                    <button class="btn btn-default btn-sm" onclick="aplicarFiltros()">Filtrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     @if (Model.Any())
     {
         <table>
@@ -71,7 +89,7 @@
     }
     else
     {
-        <p>Não existem dados para serem exibidos</p>
+        <p>Não existem dados para serem exibidos nesta data</p>
     }
 
     <div id="_AdicionarProntuarioPaciente"></div>
