Continuacao implementacao do prontuario do paciente

--- a/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
+++ b/Prontuario do Paciente Online/Views/Prontuario/Index.cshtml
@@ -96,6 +96,7 @@
 
     <script>
         document.querySelectorAll(".btn-inserir-prontuario").forEach(function (button) {
+            debugger;
             button.addEventListener("click", function () {
                 var pacienteId = this.getAttribute("data-id");
 
