--- a/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
+++ b/Prontuario do Paciente Online/Views/Tecnologia/RegistrarUsuario.cshtml
@@ -65,6 +65,16 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="row" id="campos-medico" style="display: none;">
+                                <div class="form-group col-md-6">
+                                    <label asp-for="Medico.Nome" class="form-control-label"></label>
+                                    <input asp-for="Medico.Nome" class="form-control" placeholder="Digite o nome do médico">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label asp-for="Medico.Crm" class="form-control-label"></label>
+                                    <input asp-for="Medico.Crm" class="form-control" placeholder="Digite o CRM">
+                                </div>
+                            </div>
                         </div>
                         <div>
                             <button type="submit" class="btn btn-primary btn-sm mt-3">Registrar</button>
@@ -76,5 +86,15 @@
     </main>
 </body>
 </html>
+<script>
+    function validaCampoMedico() {
+        var select = document.getElementById("campo-acesso");
+        var camposMedico = document.getElementById("campos-medico");
 
-<script src="~/js/site.js"></script>
+        if (select.value === "@EnumPermissoes.Medico") {
+            camposMedico.style.display = "block";
+        } else {
+            camposMedico.style.display = "none";
+        }
+    }
+</script>
