--- a/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
+++ b/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
@@ -9,6 +9,9 @@
         font-size: 11px;
     }
 </style>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <html>
 <body>
     <div class="main-content mt-4 ">
@@ -22,7 +25,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label class="form-control-label">Nome</label>
+                                    <label class="form-control-label">Nome Completo</label>
                                     <input asp-for="Nome" class="form-control" placeholder="Digite o nome">
                                     <span asp-validation-for="Nome" class="text-danger"></span>
                                 </div>
@@ -113,106 +116,102 @@
                             </div>
                         </div>
 
-                            <div class="row">
+                        <div class="row">
                             <h4 class="color-background mt-5 mb-5">Dados do Acompanhante</h4>
-                                <div class="col-md-6">
-                                    
-                                    <div class="form-group">
-                                        <label class="form-control-label">Nome</label>
-                                        <input asp-for="Acompanhante.NomeAcompanhante" class="form-control" placeholder="Digite o nome">
-                                        <span asp-validation-for="Acompanhante.NomeAcompanhante" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label class="form-control-label">CPF</label>
-                                        <input asp-for="Acompanhante.CpfAcompanhante" class="form-control" placeholder="Digite o CPF">
-                                        <span asp-validation-for="Acompanhante.CpfAcompanhante" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label class="form-control-label">Estado</label>
-                                        <select class="form-control" name="Acompanhante.EstadoAcompanhante">
-                                            <option value="" disabled selected>Selecione um estado</option>
-                                            <option value="AC">Acre</option>
-                                            <option value="AL">Alagoas</option>
-                                            <option value="AP">Amapá</option>
-                                            <option value="AM">Amazonas</option>
-                                            <option value="BA">Bahia</option>
-                                            <option value="CE">Ceará</option>
-                                            <option value="DF">Distrito Federal</option>
-                                            <option value="ES">Espírito Santo</option>
-                                            <option value="GO">Goiás</option>
-                                            <option value="MA">Maranhão</option>
-                                            <option value="MT">Mato Grosso</option>
-                                            <option value="MS">Mato Grosso do Sul</option>
-                                            <option value="MG">Minas Gerais</option>
-                                            <option value="PA">Pará</option>
-                                            <option value="PB">Paraíba</option>
-                                            <option value="PR">Paraná</option>
-                                            <option value="PE">Pernambuco</option>
-                                            <option value="PI">Piauí</option>
-                                            <option value="RJ">Rio de Janeiro</option>
-                                            <option value="RN">Rio Grande do Norte</option>
-                                            <option value="RS">Rio Grande do Sul</option>
-                                            <option value="RO">Rondônia</option>
-                                            <option value="RR">Roraima</option>
-                                            <option value="SC">Santa Catarina</option>
-                                            <option value="SP">São Paulo</option>
-                                            <option value="SE">Sergipe</option>
-                                            <option value="TO">Tocantins</option>
-                                        </select>
-                                        <span asp-validation-for="Acompanhante.EstadoAcompanhante" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label class="form-control-label">Cidade</label>
-                                        <input asp-for="Acompanhante.CidadeAcompanhante" class="form-control" placeholder="Digite a cidade">
-                                        <span asp-validation-for="Acompanhante.CidadeAcompanhante" class="text-danger"></span>
-                                    </div>
+                            <div class="col-md-6">
+
+                                <div class="form-group">
+                                    <label class="form-control-label">Nome</label>
+                                    <input asp-for="Acompanhante.NomeAcompanhante" id="nome-completo" class="form-control" placeholder="Digite o nome">
+                                    <span asp-validation-for="Acompanhante.NomeAcompanhante" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label class="form-control-label">Endereço</label>
-                                        <input asp-for="Acompanhante.EnderecoAcompanhante" class="form-control" placeholder="Digite o endereço">
-                                        <span asp-validation-for="Acompanhante.EnderecoAcompanhante" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label class="form-control-label">Número</label>
-                                        <input asp-for="Acompanhante.NumeroAcompanhante" class="form-control" placeholder="Digite o numero da residencia">
-                                        <span asp-validation-for="Acompanhante.NumeroAcompanhante" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label class="form-control-label">Grau de parentesco</label>
-                                        <input asp-for="Acompanhante.GrauParentesco" class="form-control" placeholder="Digite o grau de parentesco">
-                                        <span asp-validation-for="Acompanhante.GrauParentesco" class="text-danger"></span>
-                                    </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="form-control-label">CPF</label>
+                                    <input asp-for="Acompanhante.CpfAcompanhante" class="form-control" placeholder="Digite o CPF">
+                                    <span asp-validation-for="Acompanhante.CpfAcompanhante" class="text-danger"></span>
                                 </div>
                             </div>
-                        @*</div>*@
-                        <h4 class="color-background mt-5 mb-5">Dados de acesso do acompanhante</h4>
-                        @*<div class="container-fluid">*@
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="form-control-label">Estado</label>
+                                    <select class="form-control" name="Acompanhante.EstadoAcompanhante">
+                                        <option value="" disabled selected>Selecione um estado</option>
+                                        <option value="AC">Acre</option>
+                                        <option value="AL">Alagoas</option>
+                                        <option value="AP">Amapá</option>
+                                        <option value="AM">Amazonas</option>
+                                        <option value="BA">Bahia</option>
+                                        <option value="CE">Ceará</option>
+                                        <option value="DF">Distrito Federal</option>
+                                        <option value="ES">Espírito Santo</option>
+                                        <option value="GO">Goiás</option>
+                                        <option value="MA">Maranhão</option>
+                                        <option value="MT">Mato Grosso</option>
+                                        <option value="MS">Mato Grosso do Sul</option>
+                                        <option value="MG">Minas Gerais</option>
+                                        <option value="PA">Pará</option>
+                                        <option value="PB">Paraíba</option>
+                                        <option value="PR">Paraná</option>
+                                        <option value="PE">Pernambuco</option>
+                                        <option value="PI">Piauí</option>
+                                        <option value="RJ">Rio de Janeiro</option>
+                                        <option value="RN">Rio Grande do Norte</option>
+                                        <option value="RS">Rio Grande do Sul</option>
+                                        <option value="RO">Rondônia</option>
+                                        <option value="RR">Roraima</option>
+                                        <option value="SC">Santa Catarina</option>
+                                        <option value="SP">São Paulo</option>
+                                        <option value="SE">Sergipe</option>
+                                        <option value="TO">Tocantins</option>
+                                    </select>
+                                    <span asp-validation-for="Acompanhante.EstadoAcompanhante" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="form-control-label">Cidade</label>
+                                    <input asp-for="Acompanhante.CidadeAcompanhante" class="form-control" placeholder="Digite a cidade">
+                                    <span asp-validation-for="Acompanhante.CidadeAcompanhante" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-3">
-                            
+                                <div class="form-group">
+                                    <label class="form-control-label">Endereço</label>
+                                    <input asp-for="Acompanhante.EnderecoAcompanhante" class="form-control" placeholder="Digite o endereço">
+                                    <span asp-validation-for="Acompanhante.EnderecoAcompanhante" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label class="form-control-label">Número</label>
+                                    <input asp-for="Acompanhante.NumeroAcompanhante" class="form-control" placeholder="Digite o numero da residencia">
+                                    <span asp-validation-for="Acompanhante.NumeroAcompanhante" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="form-control-label">Grau de parentesco</label>
+                                    <input asp-for="Acompanhante.GrauParentesco" class="form-control" placeholder="Digite o grau de parentesco">
+                                    <span asp-validation-for="Acompanhante.GrauParentesco" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <h4 class="color-background mt-5 mb-5">Dados de acesso do acompanhante</h4>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <input asp-for="CadastroAcesso.NomeCompleto" hidden>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <label class="form-control-label">E-mail</label>
                                     <input asp-for="CadastroAcesso.Email" class="form-control" placeholder="Digite o e-mail">
                                     <span asp-validation-for="CadastroAcesso.Email" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <label class="form-control-label">Usuário</label>
-                                    <input asp-for="CadastroAcesso.Usuario" class="form-control" placeholder="Digite o usuário">
-                                    <span asp-validation-for="CadastroAcesso.Usuario" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-md-3">
@@ -229,26 +228,28 @@
                                     <span asp-validation-for="CadastroAcesso.ConfirmPassword" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="form-control-label">Acesso</label>
-                                    <select asp-for="CadastroAcesso.PermissaoNome" class="form-control">
-                                        <option value="" disabled selected>Selecione o tipo de acesso</option>
-                                        <option value="@EnumPermissoes.Acompanhante">Acompanhante</option>
-                                    </select>
-                                </div>
-                            </div>
-                        @*</div>*@
+                        </div>
 
-                            <div class="d-flex justify-content-end">
-                                <div class="col-md-3">
-                                    <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-secondary btn-sm">Cancelar</a>
-                                    <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-                                </div>
-                            </div>  
+                        <input type="hidden" asp-for="CadastroAcesso.PermissaoNome" value="@EnumPermissoes.Acompanhante"> @*sempre cria com permissão acompanhante*@
+                        <input type="hidden" asp-for="CadastroAcesso.EnumStatusAcesso" value="1"> @*sempre cria com status acesso ativo*@
+                        <hr />
+                        <div class="d-flex justify-content-end">
+                            <div class="col-md-3">
+                                <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-secondary btn-sm">Cancelar</a>
+                                <button type="submit" onclick="inseriNomeAcompanhante()" class="btn btn-primary btn-sm">Salvar</button>
+                            </div>
+                        </div>
                     </form>
                 </table>
+            </div>
         </div>
     </div>
 </body>
 </html>
+
+<script>
+    function inseriNomeAcompanhante() {
+        let valorCampoNomeAcompanhante = jQuery('#nome-completo').val();
+        jQuery('#CadastroAcesso_NomeCompleto').val(valorCampoNomeAcompanhante);
+    }
+</script>
